--- a/html/index.html
+++ b/html/index.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&family=Rubik:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&family=Rubik:wght@900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../dist/css/styles.css">
     <title>Arbor Service</title>
 </head>
+
 <body>
-  <header>
-      <div class="r-header__top">
-        <div class="container r-header__top-inner">
-            <div class="r-header__menu">MENU</div>
-            <div class="r-header__contact">CONTACT</div>
-        </div>
-      </div>
+    <div class="r-parent-container">
 
-      <div class="r-header__branding">
-        <div class="container">
-            <div class="r-branding__title">
-                <h1>ARBOR SERVICE</h1>
-            </div>
-            
-            <!-- slogan -->
-            <div class="r-branding__slogan">
-                <p>boomchirurgie en tuinonderhoud</p> 
+    </div>
+    <header>
+        <div class="r-header__top">
+            <div class="container r-header__top-inner">
+                <div class="r-header__menu">MENU</div>
+                <div class="r-header__contact">CONTACT</div>
             </div>
         </div>
-      </div>
-  </header>
 
-  <main>
-      <div class="r-content">
-          <div class="container">
-            <h2>Arbor Service <span>Boomverzorging tuinonderhoud</span></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium maxime, ab fugiat ad commodi cupiditate enim atque animi dolorum! Eaque ex quasi molestiae vitae tenetur, officia at odio corrupti quas!
-            Maiores quisquam dolorum optio, ipsum dignissimos veniam temporibus cupiditate quaerat dolore perferendis blanditiis, rerum facilis natus aliquid beatae quas. Maiores pariatur vitae unde inventore molestiae nesciunt quaerat, beatae at eos.
-            Quam voluptates repudiandae quidem obcaecati necessitatibus qui aliquid, reprehenderit quae molestiae labore? Reiciendis odio dolore impedit! Maxime pariatur quas ab, similique repellat sint culpa inventore, voluptatem iusto magnam nisi nihil!
-            Odit facilis asperiores voluptatibus dolorem dolor cum atque fuga. Inventore perferendis libero illum? Enim eos ducimus nostrum placeat, ea magni nesciunt beatae neque, asperiores inventore distinctio aperiam. Doloremque, ullam suscipit.
-            Sapiente eveniet nostrum doloremque aliquam, recusandae neque maxime officia dolorum reprehenderit quisquam, ea rerum tempora ipsum odio iusto alias consectetur! Earum architecto distinctio reiciendis ratione assumenda impedit rerum provident molestias.
-            </p>
-          </div>
-      </div>
-  </main>
+        <div class="r-header__branding">
+            <div class="container">
+                <div class="r-branding__title">
+                    <h1>ARBOR SERVICE</h1>
+                </div>
+
+                <!-- slogan -->
+                <div class="r-branding__slogan">
+                    <p>boomchirurgie en tuinonderhoud</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="r-parent-main">
+        <main>
+            <div class="r-content">
+                <div class="container">
+                    <h2>Arbor Service <span>Boomverzorging tuinonderhoud</span></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium maxime, ab fugiat ad
+                        commodi cupiditate enim atque animi dolorum! Eaque ex quasi molestiae vitae tenetur, officia at
+                        odio corrupti quas!
+                        Maiores quisquam dolorum optio, ipsum dignissimos veniam temporibus cupiditate quaerat dolore
+                        perferendis blanditiis, rerum facilis natus aliquid beatae quas. Maiores pariatur vitae unde
+                        inventore molestiae nesciunt quaerat, beatae at eos.
+                        Quam voluptates repudiandae quidem obcaecati necessitatibus qui aliquid, reprehenderit quae
+                        molestiae labore? Reiciendis odio dolore impedit! Maxime pariatur quas ab, similique repellat
+                        sint culpa inventore, voluptatem iusto magnam nisi nihil!
+                        Odit facilis asperiores voluptatibus dolorem dolor cum atque fuga. Inventore perferendis libero
+                        illum? Enim eos ducimus nostrum placeat, ea magni nesciunt beatae neque, asperiores inventore
+                        distinctio aperiam. Doloremque, ullam suscipit.
+                        Sapiente eveniet nostrum doloremque aliquam, recusandae neque maxime officia dolorum
+                        reprehenderit quisquam, ea rerum tempora ipsum odio iusto alias consectetur! Earum architecto
+                        distinctio reiciendis ratione assumenda impedit rerum provident molestias.
+                    </p>
+                </div>
+            </div>
+        </main>
+
+        <footer class="r-footer">
+            <div class="container r-footer__inner">
+
+            </div>
+        </footer>
+    </div>
+
 </body>
+
 </html>
