layout menu and contact-overlay  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	modified:   html/contact-overlay.html 	new file:   html/content/aanplanten_lei-bomen.html 	new file:   html/content/bedrijven.html 	new file:   html/content/home.html 	new file:   html/content/tuinwerken.html 	modified:   html/head.html 	modified:   html/menu-overlay.html 	modified:   php/index.php 	modified:   sass/00-abstracts/_variables.scss 	modified:   sass/03-regions/_contact-overlay.scss 	modified:   sass/03-regions/_menu-overlay.scss 	new file:   sass/04-components/_branding-overlay.scss 	modified:   sass/04-components/_close-btn.scss 	modified:   sass/04-components/_cookiealert.scss 	modified:   sass/04-components/_index.scss 	new file:   sass/04-components/_phone-btn.scss

--- a/html/menu-overlay.html
+++ b/html/menu-overlay.html
@@ -1,28 +1,36 @@
-
 <div class="r-menu-overlay">
   <div class="r-menu-overlay__top">
     <div class="r-menu-overlay__close js-close-menu">
       <span class="c-close-btn">&nbsp;</span>
     </div>
-    <div class="r-menu-overlay__logo">
-      <img src="../dist/images/logo.png" alt="">
-    </div>
   </div>
+
+  <div class="c-overlay-branding">
+    <div class="c-overlay-branding__title" >Arbor service</div>
+
+    <div class="c-overlay-branding__logo">
+      <a class="c-overlay-branding__link" href="index.php">
+        <img src="../dist/images/logo_accent-clr.png" alt="">
+      </a>
+    </div>
+
+  </div>
+
 
   <div class="r-menu-overlay__list">
     <div class="">
       <ul class="r-menu-overlay__items">
         <li class="r-menu-overlay__item">
-          <a class="r-menu-overlay__link" href="#">Home</a></li>
+          <a class="r-menu-overlay__link" href="index.php">Home</a></li>
         <li class="r-menu-overlay__item">
           <a class="r-menu-overlay__link" href="#">Bedrijven</a></li>
         <li class="r-menu-overlay__item">
           <a class="r-menu-overlay__link" href="#">Tuinwerken</a></li>
         <li class="r-menu-overlay__item">
           <a class="r-menu-overlay__link" href="#">Boomverzorging</a>
-          <ul>
+          <ul class="r-menu-overlay__items">
             <li>
-              <a href="#">Aanplanten van bomen of leibomen</a>
+              <a class="r-menu-overlay__link" href="#">Aanplanten van bomen of leibomen</a>
             </li>
           </ul>
         </li>
