more layout overlay items and footer  Changes to be committed: 	new file:   css/03-regions/-footer.css 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	new file:   dist/images/content/16.jpg 	modified:   html/contact-overlay.html 	modified:   html/content/home.html 	modified:   html/footer.html 	deleted:    html/index.html 	new file:   images/content/16.jpg 	modified:   php/index.php 	modified:   sass/01-base/_typography.scss 	new file:   sass/03-regions/_content-main.scss 	new file:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_index.scss 	modified:   sass/04-components/_branding-overlay.scss

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,5 @@
 <footer class="r-footer">
   <div class="container r-footer__inner">
-      <div class="footer__contact">
-          Contact gegevens
-      </div>
-      <div class="footer__copy">
-        Copyright
-      </div>
-  </div>
-</footer>
+    <div class="r-footer__contact">
+      Joey Liberloo <br>Nijverheidsstraat 36<br>3583 Paal-Beringen
+    </div>
