--- a/html/contact-overlay.html
+++ b/html/contact-overlay.html
@@ -28,5 +28,14 @@
       </a>
     </div>
 
+    <div class="fb-page" data-href="https://www.facebook.com/arborservice" data-tabs="" data-small-header="false"
+      data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
+      <div class="fb-xfbml-parse-ignore">
+        <blockquote cite="https://www.facebook.com/arborservice">
+          <a href="https://www.facebook.com/arborservice">Arbor - service</a>
+        </blockquote>
+      </div>
+    </div>
+
   </div>
 </div>
