--- a/html/content/home.html
+++ b/html/content/home.html
@@ -1,4 +1,6 @@
-<h2>Arbor Service <span>Boomverzorging tuinonderhoud</span></h2>
+<h2 class="heading-two">Arbor Service <span>Boomverzorging tuinonderhoud</span></h2>
+
+<img src="../../dist/images/content/16.jpg" alt="">
 <p>ARBOR - SERVICE uit Beringen is een jong, energiek bedrijf dat je kan helpen met al je boomverzorging kwesties, dit kan gaan van <a href="aanplanten-van-bomen-leibomen">aanplanten van bomen</a>, <a href="boombescherming-op-werven">boombescherming</a> op werven, <a href="kroon-en-kluitverankering">kroonverankering, kluitverankering,</a> snoeien van bomen, <a href="uitgraven-frezen-van-stronken">uitgraven en frezen van boomstronken</a>, vellen van gevaarlijke bomen, en nog veel meer.</p>
 
 <p>Maar ook voor je tuinonderhoud kan je bij ons terecht.</p>
