footer copyrights and few litle things  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	new file:   dist/images/left-image_smaller.jpg 	modified:   html/contact-overlay.html 	modified:   html/footer.html 	new file:   images/left-image_smaller.jpg 	modified:   php/index.php 	modified:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_index.scss 	new file:   sass/03-regions/_parent-container.scss 	modified:   sass/04-components/_buttons.scss 	modified:   sass/04-components/_contact-btn.scss

--- a/html/contact-overlay.html
+++ b/html/contact-overlay.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="r-contact-overlay__social">
-      <a href="https://www.facebook.com/uitvaartzorgkuaga/">
+      <a href="https://www.facebook.com/arborservice">
         <img class="r-contact-overlay__icon" src="../dist/images/facebook-icon.jpg" alt="">
       </a>
     </div>
