--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,6 @@
 <footer class="r-footer">
   <div class="container r-footer__inner">
     <div class="r-footer__contact">
-      Joey Liberloo <br>Nijverheidsstraat 36<br>3583 Paal-Beringen
+      <p>Joey Liberloo <br>Nijverheidsstraat 36<br>3583 Paal-Beringen</p>
+      <a class="c-btn c-btn--accent" href="tel:+32491550999">+32491550999</a>
     </div>
