--- a/html/header.html
+++ b/html/header.html
@@ -1,29 +1,32 @@
-<header>
+<header class="r-header">
   <div class="r-header__top">
-      <div class="container r-header__top-inner">
-          <div class="r-header__menu">
-              <div class="c-hamburger-btn">
-                  <span class="c-hamburger-btn--open">&nbsp;</span>
-                  <span class="c-hamburger-btn__label"> Menu</span>
-              </div>
-          </div>
-          <div class="r-header__contact">
-              <div class="c-contact-btn js-open-contact">
-                  <img src="../dist/images/contact-btn.png" alt="" />
-              </div>
-          </div>
+    <div class="container r-header__top-inner">
+      <div class="r-header__menu">
+        <div class="c-hamburger-btn">
+          <span class="c-hamburger-btn--open">&nbsp;</span>
+          <span class="c-hamburger-btn__label"> Menu</span>
+        </div>
       </div>
+      <div class="r-header__contact">
+        <div class="c-contact-btn js-open-contact">
+          <img src="../dist/images/contact-btn.png" alt="" />
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="r-header__branding">
-      
-          <div class="r-branding__title">
-              <h1>ARBOR SERVICE</h1>
-              <!-- slogan -->
-          <div class="r-branding__slogan">
-              <p>boomchirurgie en tuinonderhoud</p>
-          </div>
-          </div>
-      
+
+    <div class="r-branding__title">
+      <div class="container">
+        <h1 class="heading-one">Arbor service</h1>
+        <!-- slogan -->
+        <div class="r-branding__slogan">
+          <span>boomchirurgie en tuinonderhoud</span>
+        </div>
+      </div>
+
+    </div>
+
   </div>
 </header>
